fixed card spacing & added to project cards

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,13 +4,13 @@
     text-align: center;
     font-size: 2.2em;
     padding-top: 20px;
-    position: relative;
-    top: 30px;
+    // position: relative;
+    // top: 30px;
   }
 }
 
 .project-card {
-  height: 80vh;
+  min-height: 80vh;
   width: 80%;
   margin: 1em auto;
   display: flex;
@@ -36,6 +36,39 @@
   margin-top: 1em;
 }
 
+.tech {
+  p {
+    margin: 0;
+    font-size: 14px;
+  }
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.pink {
+  background-color: #fe6a5e;
+}
+
+.yellow {
+  background-color: #FFBE0B;
+}
+
+.blue {
+  background-color: #50C9CE;
+}
+
+.green {
+  background-color: #B14AED;
+}
+
+
+
 @media (max-width:600px) {
   .project-card {
     width: 90%;
@@ -59,5 +92,11 @@
     h3 {
       text-align: center;
     }
+  }
+}
+
+@media (max-width:350px) {
+  #card-1 {
+    margin-top: 20px;
   }
 }
